--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: blag
-email: your-email@domain.com
+email: jenelledobyns@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -25,6 +25,8 @@ twitter_username:
 github_username:
 sass:
     sass_dir: _sass
+    style: compressed
+
 
 # Pagination Settings
 pagination:
