--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: blag
+title: Noble Vita
 email: jenelledobyns@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -24,7 +24,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
 github_username:
 sass:
-    sass_dir: _sass
+    sass_dir: ./_sass
     style: compressed
 
 
@@ -56,6 +56,3 @@ exclude:
   - Gemfile.lock
 
 
-
-sass:
-  sass_dir: ./sass
